# ezmarket

./: CMakeLists.txt  README.md  database.dat.example  ezmarket.pro  ezmarket.qrc  ezmarket_da_DK.qm  ezmarket_da_DK.ts  ezmarket_de.ts
barcodes/: barcodes.odt  category_barcodes.odt  customer_barcodes.odt  item_barcodes.odt
graphics/icons/: README.md
graphics/xcf/: marquee.xcf
sounds/: lines.txt
src/: aboutbox.cpp  aboutbox.h  accounteditor.cpp  accounteditor.h  accountsmodel.cpp  accountsmodel.h  accountstab.cpp  accountstab.h  accountwidget.cpp  accountwidget.h  booklist.h  buttongroup.cpp  buttongroup.h  categoriesmodel.cpp  categoriesmodel.h  categoriestab.cpp  categoriestab.h  categoryeditor.cpp  categoryeditor.h  categorywidget.cpp  categorywidget.h  checkout.cpp  checkout.h  data.h  datatypes.h  entryeditor.cpp  entryeditor.h  imgtools.cpp  imgtools.h  itemdata.cpp  itemdata.h  itemeditor.cpp  itemeditor.h  itemsmodel.cpp  itemsmodel.h  itemstab.cpp  itemstab.h  itemwidget.cpp  itemwidget.h  lineedit.cpp  (+12 more)
translations/: ezmarket-da_DK.ts  ezmarket-de_DE.ts
